# esp32-ppp-cmux

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
cmux-core/: Cargo.toml
cmux-core/src/: address.rs  control.rs  fcs.rs  frame.rs  lib.rs  state.rs
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
firmware/src/: board.rs  config.rs  logger.rs  main.rs
firmware/src/app/: mod.rs  mqtt.rs  status.rs
firmware/src/cmux/: channel.rs  dispatcher.rs  mod.rs  tx.rs
firmware/src/modem/: bringup.rs  mod.rs
firmware/src/net/: buffered.rs  mod.rs  ppp.rs  stack.rs  tls.rs
firmware/src/power/: ip5306.rs  mod.rs  sim800.rs
