[package]
name         = "cmux-core"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
description  = "3GPP TS 27.010 basic-mode CMUX framing (no_std, host-testable)"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
heapless          = { workspace = true }
embedded-io-async = { workspace = true }

[dev-dependencies]
proptest = "1"
